--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,25 @@ html,body{
 .clear {
 	clear: both;
 }
-.header{
+header{
+		text-align: center;
+		
+}
+header li img {
+	float: center;
+	
+}
+	
+header li{
+		float: right;
+		list-style: none;
+		color:white;
+		margin-top: 40px;
+		margin-right: 20px;
+		
+	}
+
+.header2{
 	width: 100%;
 	padding: 0 2%;
 	height: 100px;
@@ -115,4 +133,5 @@ label,form{
 	margin: 0 auto;
 	display: block !important;
 	text-align: left;
+}
 }
