--- a/css/style.css
+++ b/css/style.css
@@ -14,23 +14,6 @@ html,body{
 .clear {
 	clear: both;
 }
-header{
-		text-align: center;
-		
-}
-header li img {
-	float: center;
-	
-}
-	
-header li{
-		float: right;
-		list-style: none;
-		color:white;
-		margin-top: 40px;
-		margin-right: 20px;
-		
-	}
 
 .header2{
 	width: 100%;
@@ -111,8 +94,6 @@ footer p{
 
 @media screen and (max-width: 768px){
 
-
-
 .container {
 	
 	width: 100%;
@@ -125,13 +106,24 @@ footer p{
 	width: 100%;
 	height: auto;
 }
-   
-   
 
+header li{
+	
+	font-size: 15px;
+	padding-top: 20px;
+	
+}
 
+ 
+h2{
+	
+	font-size: 18px;
+	
+}
 label,form{
 	margin: 0 auto;
 	display: block !important;
 	text-align: left;
 }
+
 }
